--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,21 @@ body {
   --main-color-body: #f1f1f1;
   --header-tabel-background: #c0eafa;
 }
+html, body, #root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+/* App.css */
+.app-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
  
 * {
   margin: 0;
